--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
+    <meta charset="utf-8">
+    <title>Wikimedia</title>
+  </head>
+  <body>
+    <div class="container main">
+      <div class="container textbox">
+          <div class="textwrap">
+            <p>
+              Wikimedia is a global <a href="https://meta.wikimedia.org/wiki/Wikimedia_movement">movement</a> whose <a href="https://wikimediafoundation.org/wiki/Mission_statement">mission</a> is to bring free educational content to the world.
+            </p>
+          </div>
+          <div class="textwrap">
+            <p>
+              Through various <a href="https://wikimediafoundation.org/wiki/Our_projects">projects</a>, <a href="https://meta.wikimedia.org/wiki/Wikimedia_chapters">chapters</a>, and the support structure of the non-profit Wikimedia Foundation, Wikimedia <a href="https://wikimediafoundation.org/wiki/Vision">strives</a> to bring about a world in which every single human being can freely share in the sum of all knowledge.
+            </p>
+          </div>
+          <div class="welcome">
+            <h3>Welcome to Wikimedia.</h3>
+          </div>
+      </div>
 
+      <div class="menu">
+        <a><img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/enwiki-1.5x.png" alt="Wikipedia--The Online Encyclopedia"/>
+        <a><img class="imglink" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/135px-WiktionaryEn.svg.png" alt="Wictionary--The Free Dictionary" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/wikiquote.png" alt="Wikiquote--Collection of quotations" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/wikibooks.png" alt="Wikibooks--Open-Content Books" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/wikisource.png" alt="Wikisource--The free library"/>
+        <img class="imglink" src="https://upload.wikimedia.org/wikinews/en/b/bc/Wiki.png" alt="Wikinews--Free content news source"/>
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/enwikiversity.png" alt="Wikiversity--Open learning community"/>
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/specieswiki.png" alt="Wikispecies--The free species dictionary"/>
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/mediawikiwiki.png" alt="Mediawiki software documentation" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/wikidatawiki.png" alt="Wikidate--The free knowledge base" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/commonswiki.png" alt="Wikimedia Commons--Shared media library" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/wikivoyage.png" alt="Wikivoyage--The free, worldwide travel guide" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/metawiki.png" alt="Meta-Wiki--Wikimedia project coordination" />
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/incubatorwiki.png" alt="Wikimedia Incubator--For language versions in development" />
+        <img class="imglink" src="https://wikitech.wikimedia.org/w/images/c/cf/Labslogo_thumb.png" alt="Wikitech and Wikimedia Labs"/>
+        <img class="imglink" src="https://www.wikimedia.org/static/images/project-logos/foundationwiki.png" alt="Wikimedia public relations" />
+      </div>
+
+      <footer>
+        <p>
+          Imagine a world in which every single human being can freely share in the sum of all knowledge. That’s our commitment.
+        </p>
+        <div class="bottom">
+           <a href="https://wikimediafoundation.org/wiki/Terms_of_Use">Terms of Use</a>
+           <a href="https://wikimediafoundation.org/wiki/Privacy_policy">Privacy policy</a>
+        </div>
+      </footer>
+
+    </div>
+  </body>
+</html>
